--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,12 +20,21 @@
     "react/prop-types": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-explicit-any": "warn",
-    "no-irregular-whitespace": ["error", {
-      "skipStrings": false,
-      "skipComments": false,
-      "skipRegExps": false,
-      "skipTemplates": false
-    }],
+    "react-hooks/rules-of-hooks": [
+      "error",
+      {
+        "additionalHooks": "(useAsync|useAsyncFn|useAsyncRetry)"
+      }
+    ],
+    "no-irregular-whitespace": [
+      "error",
+      {
+        "skipStrings": false,
+        "skipComments": false,
+        "skipRegExps": false,
+        "skipTemplates": false
+      }
+    ],
     "no-restricted-syntax": [
       "error",
       {
@@ -47,6 +56,13 @@
     "browser": true,
     "es2020": true,
     "node": true
-  }
+  },
+  "overrides": [
+    {
+      "files": ["**/*.stories.tsx"],
+      "rules": {
+        "react-hooks/rules-of-hooks": "off"
+      }
+    }
+  ]
 }
-
