fix(release): mark sub-packages as private
- Set private: true for all sub-packages
- Only @officesdk/ui root package will be published
- Sub-packages are bundled into root package via exports
- Fixes E404 errors when trying to publish sub-packages

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -20,9 +20,7 @@
     "officesdk",
     "design-system"
   ],
-  "publishConfig": {
-    "access": "public"
-  },
+  "private": true,
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
