--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "@officesdk/ui",
-  "version": "0.2.3",
-  "description": "OfficeSdk SDK UI Component Library",
+  "name": "@officesdk/design",
+  "version": "0.1.0",
+  "description": "OfficeSdk SDK Design Component Library",
   "license": "MIT",
   "author": "OfficeSdk Team",
-  "homepage": "https://github.com/officesdk/ui#readme",
+  "homepage": "https://github.com/officesdk/officesdk-design#readme",
   "repository": {
     "type": "git",
-    "url": "https://github.com/officesdk/ui.git"
+    "url": "https://github.com/officesdk/officesdk-design.git"
   },
   "bugs": {
-    "url": "https://github.com/officesdk/ui/issues"
+    "url": "https://github.com/officesdk/officesdk-design/issues"
   },
   "keywords": [
     "react",
@@ -61,6 +61,12 @@
   },
   "dependencies": {
     "@officesdk/editor-sdk-core": "0.0.0-alpha.2"
+  },
+  "devDependencies": {
+    "@officesdk/design-components": "workspace:*",
+    "@officesdk/design-icons": "workspace:*",
+    "@officesdk/design-theme": "workspace:*",
+    "@officesdk/design-utils": "workspace:*"
   },
   "scripts": {
     "build": "node build.js",
