--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@officesdk/ui-icons",
+  "name": "@officesdk/design-icons",
   "version": "0.1.0",
   "private": true,
   "description": "Built-in icon resources for OfficeSdk UI",
