--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "description": "Built-in icon resources for OfficeSdk UI",
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/esm/index.js",
-  "types": "./dist/esm/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/esm/index.d.ts",
@@ -17,9 +17,10 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup && node ../../scripts/post-build.js .",
+    "build": "yarn clean && tsup && yarn rename-mts",
     "dev": "tsup --watch",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "rename-mts": "mv dist/esm/index.d.mts dist/esm/index.d.ts"
   },
   "devDependencies": {
     "@svgr/core": "^8.1.0",
