--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "description": "Officesdk design Utilities",
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/esm/index.js",
-  "types": "./dist/esm/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/esm/index.d.ts",
@@ -17,7 +17,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup && node ../../scripts/post-build.js .",
+    "build": "tsup",
     "dev": "tsup --watch",
     "clean": "rm -rf dist"
   },
