--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -73,13 +73,11 @@
     "README.md"
   ],
   "peerDependencies": {
+    "@officesdk/editor-sdk-core": "0.0.0-alpha.6",
     "rc-tooltip": "^6.0.0",
     "react": ">=16.9.0",
     "react-dom": ">=16.9.0",
     "styled-components": ">=5.2.0"
-  },
-  "dependencies": {
-    "@officesdk/editor-sdk-core": "0.0.0-alpha.3"
   },
   "devDependencies": {
     "@officesdk/design-components": "workspace:*",
