--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -73,8 +73,10 @@
     "README.md"
   ],
   "peerDependencies": {
-    "@officesdk/editor-sdk-core": "0.0.0-alpha.8",
+    "@officesdk/editor-sdk-core": "0.0.0-alpha.9",
+    "rc-menu": "^9.0.0",
     "rc-tooltip": "^6.0.0",
+    "rc-virtual-list": "^3.0.0",
     "react": ">=16.9.0",
     "react-dom": ">=16.9.0",
     "styled-components": ">=5.2.0"
