refactor(Loading): enhance loading component with improved theme configuration, custom indicators, and updated Storybook examples

--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -72,7 +72,9 @@
     "dist",
     "README.md"
   ],
-  "sideEffects": false,
+  "sideEffects": [
+    "**/*.css"
+  ],
   "dependencies": {
     "@officesdk/editor-sdk-core": "0.0.0-alpha.14",
     "rc-dialog": "^10.0.0",
